IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/Catalog_Line_Item__c.object-meta.xml
<CustomObject>
    <description>A line item in a Catalog Order for use with the Catalog mobile app.</description>
    <label>Catalog Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000}</displayFormat>
        <label>Catalog Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>