IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/fields/Catalog_Order__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Order__c</fullName>
    <label>Order</label>
    <referenceTo>Catalog_Order__c</referenceTo>
    <relationshipLabel>Catalog Line Items</relationshipLabel>
    <relationshipName>Catalog_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>