IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Catalog Line Items</relationshipLabel>
    <relationshipName>Catalog_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>