IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/fields/Product_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Short_Description__c</fullName>
    <formula>Product__r.Blurb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>