IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>A subtotal for the line item to help with Order roll-up calculations.</description>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>