IntershipFirstProject/force-app/main/default/objects/Catalog_Line_Item__c/fields/VF_Image__c.field-meta.xml
<CustomField>
    <fullName>VF_Image__c</fullName>
    <formula>Product__r.VF_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VF Image</label>
    <type>Text</type>
</CustomField>